--- a/src/app/outstatic/styles.css
+++ b/src/app/outstatic/styles.css
@@ -1,5 +1,2 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-@import 'outstatic/outstatic.css';
+@import "tailwindcss";
+@import "outstatic/outstatic.css";
